force-app/main/default/objects/User/fields/Active_Recognition_Survey__c.field-meta.xml
<CustomField>
    <fullName>Active_Recognition_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Recognition Survey</label>
    <type>Checkbox</type>
</CustomField>