force-app/main/default/objects/User/fields/AM_Meeting_Link__c.field-meta.xml
<CustomField>
    <fullName>AM_Meeting_Link__c</fullName>
    <label>AM Meeting Link</label>
    <type>Url</type>
</CustomField>