force-app/main/default/objects/User/fields/dialforce__Dialer_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>dialforce__Dialer_Phone_Number__c</fullName>
    <inlineHelpText>Please enter the number you wish us to call you at when using DialForce by Refractive Dialer.</inlineHelpText>
    <label>DialSource Phone Number</label>
    <type>Phone</type>
</CustomField>