force-app/main/default/objects/User/fields/dialforce__Dialsource_Agent_Online__c.field-meta.xml
<CustomField>
    <fullName>dialforce__Dialsource_Agent_Online__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marked if the Agent is currently logged on and dialing a Call List on Refractive Dialer Dialsource.</description>
    <inlineHelpText>Marked if the Agent is currently logged on and dialing a Call List on Refractive Dialer Dialsource.</inlineHelpText>
    <label>Dialsource Agent Online</label>
    <type>Checkbox</type>
</CustomField>