force-app/main/default/objects/User/fields/dialforce__Other_Contact__c.field-meta.xml
<CustomField>
    <fullName>dialforce__Other_Contact__c</fullName>
    <description>Used for other contact methods such as Skype, Google Talk, SIP, or IAX.</description>
    <label>DialSource Other Contact Method</label>
    <length>40</length>
    <type>Text</type>
</CustomField>