force-app/main/default/objects/User/fields/DialSource__DialSource_Development_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>DialSource__DialSource_Development_Endpoint__c</fullName>
    <label>DialSource Development Endpoint</label>
    <length>140</length>
    <type>Text</type>
</CustomField>