force-app/main/default/objects/User/fields/DialSource__DialSource_Development_Mode__c.field-meta.xml
<CustomField>
    <fullName>DialSource__DialSource_Development_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this to use the development server.</description>
    <label>DialSource Development Mode</label>
    <type>Checkbox</type>
</CustomField>