force-app/main/default/objects/User/fields/DialSource__DialSource_Minimize__c.field-meta.xml
<CustomField>
    <fullName>DialSource__DialSource_Minimize__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DialSource Minimize</label>
    <type>Checkbox</type>
</CustomField>