force-app/main/default/objects/User/fields/DialSource__DialSource_Testing_Mode__c.field-meta.xml
<CustomField>
    <fullName>DialSource__DialSource_Testing_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DialSource Testing Mode</label>
    <type>Checkbox</type>
</CustomField>