force-app/main/default/objects/User/fields/DialSource__DS_Technical_Contact__c.field-meta.xml
<CustomField>
    <fullName>DialSource__DS_Technical_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DS Technical Contact</label>
    <type>Checkbox</type>
</CustomField>