force-app/main/default/objects/User/fields/Employee_Recognition_Survey_Link__c.field-meta.xml
<CustomField>
    <fullName>Employee_Recognition_Survey_Link__c</fullName>
    <description>A link to the Form Assembly recognition Survey!</description>
    <label>Employee Recognition Survey Link</label>
    <type>Url</type>
</CustomField>