force-app/main/default/objects/User/fields/forcebrain__Locations__c.field-meta.xml
<CustomField>
    <fullName>forcebrain__Locations__c</fullName>
    <label>Locations</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>