force-app/main/default/objects/User/fields/forcebrain__ManageOwnAppointments__c.field-meta.xml
<CustomField>
    <fullName>forcebrain__ManageOwnAppointments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide SUMO Calendar Bin</label>
    <type>Checkbox</type>
</CustomField>