force-app/main/default/objects/User/fields/forcebrain__Providers__c.field-meta.xml
<CustomField>
    <fullName>forcebrain__Providers__c</fullName>
    <label>Providers</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>