force-app/main/default/objects/User/fields/forcebrain__Web_Conference__c.field-meta.xml
<CustomField>
    <fullName>forcebrain__Web_Conference__c</fullName>
    <label>Web Conference</label>
    <type>TextArea</type>
</CustomField>