force-app/main/default/objects/User/fields/forcebrain__WorkShift_Locations__c.field-meta.xml
<CustomField>
    <fullName>forcebrain__WorkShift_Locations__c</fullName>
    <description>This field is used to remember Locations in workshift-calendar.</description>
    <label>WorkShift Locations</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>