force-app/main/default/objects/User/fields/Form_Assembly_URL_Code__c.field-meta.xml
<CustomField>
    <fullName>Form_Assembly_URL_Code__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Form Assembly URL Code</label>
    <length>8</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>