force-app/main/default/objects/User/fields/Fulfillment_Member_ID__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Member_ID__c</fullName>
    <label>Fulfillment Member ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>