force-app/main/default/objects/User/fields/Has_Direct_Reports__c.field-meta.xml
<CustomField>
    <fullName>Has_Direct_Reports__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field denotes when a User has direct reports in the company</description>
    <inlineHelpText>This field denotes when a User has direct reports in the company</inlineHelpText>
    <label>Has Direct Reports</label>
    <type>Checkbox</type>
</CustomField>