force-app/main/default/objects/User/fields/NAMS_Appointment_URL__c.field-meta.xml
<CustomField>
    <fullName>NAMS_Appointment_URL__c</fullName>
    <label>NAMS Appointment URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>