force-app/main/default/objects/User/fields/Primary_Traffic__c.field-meta.xml
<CustomField>
    <fullName>Primary_Traffic__c</fullName>
    <label>AMP-only CSR Assignment</label>
    <relationshipName>Users</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>