force-app/main/default/objects/User/fields/Profile_Plus__c.field-meta.xml
<CustomField>
    <fullName>Profile_Plus__c</fullName>
    <description>This is the assigned MS CSR</description>
    <inlineHelpText>This is the assigned MS CSR</inlineHelpText>
    <label>Marketing Service CSR</label>
    <relationshipName>Profile_Plus</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>