force-app/main/default/objects/User/fields/Provider_ID__c.field-meta.xml
<CustomField>
    <fullName>Provider_ID__c</fullName>
    <description>Full ID of provider record associated with user</description>
    <inlineHelpText>Full ID of &quot;provider&quot; type contact record matching user&apos;s name, used by SUMO. MUST be filled in for Sumo emails and links to work.</inlineHelpText>
    <label>Provider ID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>