force-app/main/default/objects/User/fields/ScheduleOnceBookingName__c.field-meta.xml
<CustomField>
    <fullName>ScheduleOnceBookingName__c</fullName>
    <label>ScheduleOnceBookingName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>