force-app/main/default/objects/User/fields/SUMO_Link__c.field-meta.xml
<CustomField>
    <fullName>SUMO_Link__c</fullName>
    <inlineHelpText>Sumoscheduler link, MUST include &quot;PID&quot; to work.</inlineHelpText>
    <label>SUMO Link</label>
    <type>Url</type>
</CustomField>