force-app/main/default/objects/User/fields/sumoapp__Gender__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Gender__c</fullName>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MALE</fullName>
                <label>Male</label>
            </value>
            <value>
                <fullName>FEMALE</fullName>
                <label>Female</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>