force-app/main/default/objects/User/fields/sumoapp__InviteTemplate__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__InviteTemplate__c</fullName>
    <label>Invite Template</label>
    <length>18</length>
    <type>Text</type>
</CustomField>