force-app/main/default/objects/User/fields/sumoapp__OnlineSchedulerPhoneDetails__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__OnlineSchedulerPhoneDetails__c</fullName>
    <label>Online Scheduler Phone Details</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>