force-app/main/default/objects/User/fields/sumoapp__WebConferenceDetails__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__WebConferenceDetails__c</fullName>
    <label>Video Conference Details</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>