force-app/main/default/objects/User/fields/sumoapp__WebConferenceType__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__WebConferenceType__c</fullName>
    <defaultValue>&quot;USERS_LINK&quot;</defaultValue>
    <label>Web Conference Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sumoapp__WebConferenceTypes</valueSetName>
    </valueSet>
</CustomField>