force-app/main/default/objects/User/fields/User_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Full_Name__c</fullName>
    <formula>FirstName &amp; &quot; &quot; &amp; LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Full Name</label>
    <type>Text</type>
</CustomField>